<resources xmlns:tools="http://schemas.android.com/tools">
    <string-array name="Lang">
        <item>Eng</item>
        <item>العربية</item>
    </string-array>
    <string name="app_name">Olar Provider</string>
    <string name="checkout_ui_callback_scheme" translatable="false">bookroom</string>
    <string name="map_key" translatable="false">AIzaSyAISDWKoTi5fy6QZnxYg7xe6SwpQbJdDME</string>
    <string name="already_have_an_account_log_in"><font color="#A8A8A8">Already have an account?</font><font color="#FF000000"> Log In</font></string>
    <string name="dont_have_an_account_sign_in">Don\'t have account?</string>
    <string name="welcome_rush_room">Welcome to Rush Rooms</string>
    <string name="let_s_get">Let’s get</string>
    <string name="started">started</string>
    <string name="login_to_your_account_below_or_signup_for_an_amazing_experience">Login to your account below or signup for an amazing experience</string>
    <string name="sign_in_with_your_email_and_password">Welcome back ! Log in with the data that you entered during registration.</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_with_mobile_number">Login With Mobile Number</string>
    <string name="login_with_username">Login With Username</string>
    <string name="add_your_info">Add your info</string>
    <string name="conform_password">confirm Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="successfully_changed">Successfully Changed</string>
    <string name="your_password_was_successfully_changed_n_close_this_window_and_login_again">Your password was Successfully Changed\n Close this window and login again</string>
    <string name="login_again">Login again</string>
    <string name="forgot_password_new">Forgot password?</string>
    <string name="enter_the_email_address_associated_nwith_your_account">Enter the email address associated \nwith your account</string>
    <string name="reset_via_email">Reset via Email</string>
    <string name="reset_via_phone_no">Reset via Phone No.</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_new">Reset password</string>
    <string name="sign_in_with_your_mobile_nand_get_otp" tools:ignore="ExtraTranslation">Sign in with your mobile \nand get OTP</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="confirm_your_mobile">Enter Verification Code</string>
    <string name="enter_the_code_we_ve_sent_to">we have sent a code to</string>
    <string name="_919988776655">+919988776655</string>
    <string name="haven_t_received_a_code_reload">Didn\'t you receive any code?</string>
    <string name="resend">Resend Code</string>
    <string name="submit">Submit</string>
    <string name="continues">Continue</string>
    <string name="sign_in_with_your_username_n_and_password">Sign in with your username\n and password</string>
    <string name="confirm_your_email">Confirm Your Email</string>
    <string name="zeeshan_gmail_com">zeeshan@gmail.com</string>
    <string name="english">English</string>
    <string name="welcome_to_nrush_rooms">Welcome to\nRush Rooms</string>
    <string name="select_your_language">Select your language</string>
    <string name="welcome_to_rush_nrooms">Welcome to Rush \nRooms</string>
    <string name="n">مرحبا بك في \n غرف راش</string>
    <string name="ab">عربي</string>
    <string name="create_an_account">Create an account</string>
    <string name="let_s_us_know_what_your_name_email_nand_your_password">Let’s us know what your name, email,\nand your password</string>
    <string name="referral_code">Referral Code</string>
    <string name="country_region">Country/Region</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="let_s_find_best_hotel">Book Rush Roomer</string>
    <string name="search_for_hotel">Search for hotel</string>
    <string name="categories">Categories</string>
    <string name="see_more">See more</string>
    <string name="explore_city">Explore City</string>
    <string name="chat">Chat</string>
    <string name="_10_32">10:32</string>
    <string name="hello_how_can_i_help_you">Hello, How can I help you</string>
    <string name="_1">1</string>
    <string name="apartment_amp_nrooms"><![CDATA[Apartment &\nRooms]]></string>
    <string name="oman">Oman</string>
    <string name="profile">Profile</string>
    <string name="account_setting">Account Setting</string>
    <string name="wallet">Wallet</string>
    <string name="confirm">Confirm</string>
    <string name="welcome_to_rush_rooms_nthe_world_s_best_rental_app">Welcome to Rush Rooms\nThe world\'s best rental app</string>
    <string name="riyadh">Riyadh</string>
    <string name="_225_reviews">reviews</string>
    <string name="_5_0">5.0</string>
    <string name="sar_350">SAR 350</string>
    <string name="sar_437_5">SAR 437.5</string>
    <string name="wishlist">Wishlist</string>
    <string name="_25_discount">25 % Discount</string>
    <string name="invite_your_friends_and_you_get">Invite your friends and you get </string>
    <string name="share">Share</string>
    <string name="invited_friends">Invited friends</string>
    <string name="sar_5">SAR 5</string>
    <string name="_20_mar_2022">20 Mar 2022</string>
    <string name="invite_friends">Affiliating Program</string>
    <string name="notification">Notification</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="language">Language</string>
    <string name="change_password">Change Password</string>
    <string name="insert_your_property">Insert your property</string>
    <string name="finger">Fingerprint and Face Recognition</string>
    <string name="support">Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="term_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faq">FAQ</string>
    <string name="log_out">Log Out</string>
    <string name="new_password">New Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="current_password">Current Password</string>
    <string name="today">Today</string>
    <string name="_2_min_ago_new_message">2 min ago “New Message”</string>
    <string name="total_balance">Total Balance</string>
    <string name="sar_123_25">SAR 123.25</string>
    <string name="transactional_details">Transactional Details :</string>
    <string name="add_money">Add Money</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_bith">Date of Bith</string>
    <string name="gender">Gender</string>
    <string name="nationality">Nationality</string>
    <string name="national_id_number">National ID Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="verify_now">Verify Now</string>
    <string name="update">Update</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="camps">Camps</string>
    <string name="hourly">Hourly</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="select_custom_date">Select Custom Date</string>
    <string name="booking_selection">Booking Selection</string>
    <string name="add_your_booking_dates_for_exact_pricing">Add your booking dates for exact pricing</string>
    <string name="add_guets_rooms"><![CDATA[Add Guest & Rooms]]></string>
    <string name="add_room">Add Room</string>
    <string name="remove_room">Remove Room</string>
    <string name="adults">Adults</string>
    <string name="age_13">Age 13+</string>
    <string name="children">Children</string>
    <string name="age_2_12">Age 2-12+</string>
    <string name="more_8">More 8+</string>
    <string name="tap_a_star_to_rate">Tap a star to rate</string>
    <string name="upload_photos_videos">Upload Photos/Videos</string>
    <string name="write_review">Write a review</string>
    <string name="send">Send</string>
    <string name="reviews">Reviews</string>
    <string name="_21_jul_23_jul">21 Jul - 23 Jul</string>
    <string name="_1_guest">1 Guest</string>
    <string name="destinations">Destinations</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-Out</string>
    <string name="guest_amp_rooms"><![CDATA[Guest & Rooms]]></string>
    <string name="update_search">Update Search</string>
    <string name="map">Map</string>
    <string name="booking">Booking</string>
    <string name="discover">Discover</string>
    <string name="setting">Setting</string>
    <string name="sort_by">Sort By</string>
    <string name="nearby_search">Nearby search</string>
    <string name="filters">Filters</string>
    <string name="rooms_amp_beds"><![CDATA[Rooms & Beds]]></string>
    <string name="service_amp_facilities"><![CDATA[Service & Facilities]]></string>
    <string name="price_range">Price Range</string>
    <string name="property_type">Property Type</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="pets_allowed">Pets Allowed</string>
    <string name="farm_house">Farm House</string>
    <string name="rating">Rating</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="apply">Apply</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="all_destinations">All Destinations</string>
    <string name="message">Message..</string>
    <string name="your_trip">Your Trip</string>
    <string name="_2023_03_12">2023/03/12</string>
    <string name="check_intime">Check-in time</string>
    <string name="_10_00_am">10:00 am</string>
    <string name="check_out_time">Check out time</string>
    <string name="contact_details">Contact details of property</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="promo_code">Promo code</string>
    <string name="remove">Remove</string>
    <string name="price_details">Price Details</string>
    <string name="sar_437_5_x_4_nights">SAR 437.5 X 4 Nights</string>
    <string name="discount">Discount</string>
    <string name="rushroom_25_25">Rushroom 25 (-25%)</string>
    <string name="service_fee">Service fee</string>
    <string name="upload_video">Upload video</string>
    <string name="upload_image">Upload Image</string>
    <string name="cancel">Cancel</string>
    <string name="skip">Skip</string>
    <string name="before_check_out_you_have_to_n_upload_video_or_image">Before check out you have to\n upload video or image</string>
    <string name="cancel_request">Cancel request</string>
    <string name="are_you_sure_to_request_cancel_your_booking">Thank you for choosing Rush Rooms!\n Are you sure you want to request to cancel your booking?</string>
    <string name="delete_account">Delete account</string>
    <string name="not_able_to_access">• You will not be able to access your subscription .</string>
    <string name="not_able_to_login">• You will not be able to sign in or use Rush Room .</string>
    <string name="reminder_on_delete">As a reminder, when deleting your account:</string>
    <string name="info_will_delete">• Your information , files and documents stored in  Rush Room will be removed from  Rush Room’s servers .</string>
    <string name="subscription_will_cancel">• If you have any subscriptions, they will be canceled .</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
</resources>