<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_10sdp">

        <TextView
            android:id="@+id/toastTitle"
            style="@style/normaltxt_18sp_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/bold"
            android:gravity="start"
            android:text="@string/not_able_to_access"
            android:textColor="@color/black"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/regular"
            android:gravity="start"
            android:text="@string/reminder_on_delete"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/regular"
            android:gravity="start"
            android:text="@string/not_able_to_login"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/regular"
            android:gravity="start"
            android:text="@string/info_will_delete"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/regular"
            android:gravity="start"
            android:text="@string/subscription_will_cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_weight="1"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_weight="1"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/btnDeleteAcc"
                android:layout_width="0dp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_weight="1.5"
                android:background="@drawable/rounded_red_10"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:text="@string/delete_account"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</layout>