<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            app:cardCornerRadius="@dimen/dp_20"
            app:cardElevation="@dimen/dp_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">


                <ImageView
                    android:id="@+id/image"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_80"
                    android:layout_marginTop="@dimen/dp_32"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/video_circle_img" />

                <TextView
                    android:id="@+id/txtTitle"
                    style="@style/normaltxt_24sp_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_32"
                    android:text="@string/check_out"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image" />

                <TextView
                    android:id="@+id/txtDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/dp_32"
                    android:fontFamily="@font/regular"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/_4sdp"
                    android:text="@string/before_check_out_you_have_to_n_upload_video_or_image"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

                <TextView
                    android:id="@+id/btnUploadVideo"
                    style="@style/normaltxt_16sp_Medium"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/common_btn_bg"
                    android:elevation="@dimen/dp_8"
                    android:gravity="center"
                    android:text="@string/upload_video"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtDetails" />

                <TextView
                    android:id="@+id/btnUploadImage"
                    style="@style/normaltxt_16sp_Medium"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/stroke_black_common_bg"
                    android:elevation="@dimen/dp_8"
                    android:gravity="center"
                    android:text="@string/upload_image"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/btnUploadVideo"
                    app:layout_constraintStart_toStartOf="@+id/btnUploadVideo"
                    app:layout_constraintTop_toBottomOf="@+id/btnUploadVideo" />

                <TextView
                    android:id="@+id/btnSkip"
                    style="@style/normaltxt_16sp_Medium"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/stroke_black_common_bg"
                    android:elevation="@dimen/dp_8"
                    android:gravity="center"
                    android:text="@string/skip"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/btnUploadImage"
                    app:layout_constraintStart_toStartOf="@+id/btnUploadImage"
                    app:layout_constraintTop_toBottomOf="@+id/btnUploadImage" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>