<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            app:cardCornerRadius="@dimen/dp_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/imageView45"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_80"
                    android:layout_marginTop="@dimen/dp_32"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/check_img" />


                <TextView
                    android:id="@+id/textView100"
                    style="@style/normaltxt_24sp_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_24"
                    android:text="@string/cancel_request"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageView45"/>


                <TextView
                    android:id="@+id/textView101"
                    style="@style/normaltxt_14sp_Semibold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/are_you_sure_to_request_cancel_your_booking"
                    android:textColor="@color/dark_gray"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginHorizontal="@dimen/base_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView100" />

                <TextView
                    android:id="@+id/btnCancel"
                    style="@style/normaltxt_16sp_Medium"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/stroke_black_common_bg"
                    android:gravity="center"
                    android:layout_marginHorizontal="@dimen/base_margin"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView101" />

                <TextView
                    android:id="@+id/btnConfirm"
                    style="@style/normaltxt_16sp_Medium"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/common_btn_bg"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/btnCancel"
                    app:layout_constraintStart_toStartOf="@+id/btnCancel"
                    app:layout_constraintTop_toBottomOf="@+id/btnCancel" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>